--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -23,6 +23,7 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
 \addversione{0.0.2}{24/04/2023}{Erica Cavaliere}{Soldà Matteo}{Correzione errori e aggiunta delle intestazioni e dei piè di pagina}
 \addversione{0.0.3}{26/04/2023}{Erica Cavaliere}{Brotto Romina}{Inserimento interruzioni di pagina e completamento grafico di Gantt}
 \addversione{0.0.4}{16/05/2023}{Erica Cavaliere}{Lorenzo Salami}{Inserimento degli sprint e aggiornamento dei grafici di Gantt}
+\addversione{0.0.5}{25/05/2023}{Nicolas Alberti}{Erica Cavaliere}{Inserimento dello sprint 4; aggiornamento dei grafici di Gantt}
 
 \def\pgfcalendarmonthitname#1{%
 \ifcase#1 \or Gennaio\or Febbraio\or Marzo\or Aprile\or Maggio\or Giugno\or Luglio\or Agosto\or Settembre\or Ottobre\or Novembre\or Dicembre\fi%
@@ -58,7 +59,7 @@ Durante lo svolgimento del progetto, è possibile andare incontro a dei problemi
     \item Way of Working\newline
     \includegraphics[scale=0.24]{WoW_2.png}\newline
     \item Requirements and Technology Baseline\newline
-    \includegraphics[scale=0.24]{RTB_3.png}\newline
+    \includegraphics[scale=0.24]{RTB_4.png}\newline
 \end{itemize}
 
 \subsection{Scrum}\label{Scrum}
@@ -182,11 +183,15 @@ Durante lo svolgimento del progetto, è possibile andare incontro a dei problemi
 \textbf{Suddivisione del lavoro:}
 \begin{itemize}
     \item incontro con il proponente per sistemare gli use case;
+    \item inizio della stesura del \textit{Proof of Concept};
     \item decidere i linguaggi e i framework da utilizzare.
 \end{itemize}
 \textbf{Difficoltà incontrate:}
 \begin{itemize}
-    \item (da definire)
+    \item difficoltà nella decisione dei linguaggi da utilizzare, in quanto
+    ciascun membro del gruppo ha espresso preferenze ed opinioni diverse;
+    \item difficoltà nell'interpretazione di alcuni Use Case, in particolare
+    nella definizione dei ruoli degli attori. 
 \end{itemize}
 \includegraphics[scale=0.24]{RTB_3.png}\newline
 \newline
@@ -194,19 +199,53 @@ Durante lo svolgimento del progetto, è possibile andare incontro a dei problemi
     \hline
     \textbf{ORE} & \textbf{Respon.} & \textbf{Amministr.} & \textbf{Analista} & \textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} & \textbf{Totale}\\
     \hline
-    Erica & & 0 & & & & & 0(+0)\\
+    Erica & & 1 & & & & & 6(+1)\\
+    \hline
+    Francesco & & & & & & 1 & 6(+1)\\
+    \hline
+    Lorenzo & & 1 & & & & & 6(+1)\\
+    \hline
+    Matteo & & & 2 & & & & 9(+2)\\
+    \hline
+    Nicolas & & & 2 & & & & 8.30(+2)\\
+    \hline
+    Romina & 1 & & & & & & 6(+1)\\
+    \hline
+    \textbf{Totale} & 8(+1) & 13.30(+2) & 14(+4) & 0(+0) & 0(+0) & 6(+1) & 41.30(+8)\\
+    \hline
+\end{tabular}\\[8pt]
+
+\subsubsection{Sprint 5}
+\textbf{Data di inizio:} 26/05/2023\newline
+\textbf{Data di fine:} 02/06/2023\newline
+\newline
+\textbf{Suddivisione del lavoro:}
+\begin{itemize}
+    \item (da definire)
+\end{itemize}
+\textbf{Difficoltà incontrate:}
+\begin{itemize}
+    \item (da definire)
+\end{itemize}
+\includegraphics[scale=0.24]{RTB_4.png}\newline
+\newline
+\begin{tabular}{|c|c|c|c|c|c|c|c|}
+    \hline
+    \textbf{ORE} & \textbf{Respon.} & \textbf{Amministr.} & \textbf{Analista} & \textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} & \textbf{Totale}\\
+    \hline
+    Erica & & & 0 & & & & 0(+0)\\
     \hline
     Francesco & & & & & & 0 & 0(+0)\\
     \hline
-    Lorenzo & & 0 & & & & & 0(+0)\\
+    Lorenzo & 0 & & & & & & 0(+0)\\
     \hline
-    Matteo & & & 0 & & & & 0(+0)\\
+    Matteo & & & & & 0 & & 0(+0)\\
     \hline
-    Nicolas & & & 0 & & & & 0(+0)\\
+    Nicolas & & 0 & & & & & 0(+0)\\
     \hline
-    Romina & 0 & & & & & & 0(+0)\\
+    Romina & & & 0 & & & & 0(+0)\\
     \hline
-    \textbf{Totale} & 0(+0) & 0(+) & 0(+0) & 0(+0) & 0(+0) & 0(+0) & 0(+0)\\
+    \textbf{Totale} & 0(+0) & 0(+0) & 0(+0) & 0(+0) & 0(+0) & 0(+0) & 0(+0)\\
     \hline
 \end{tabular}\\[8pt]
 
